<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="text_my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="button_popular_movies">Popular Movies</string>

    <string name="button_stock_hawk">Stock Hawk</string>

    <string name="button_build_it_bigger">Build It Bigger</string>
    <string name="button_make_your_app_material">Make Your App Material</string>
    <string name="button_go_ubiquitous">Go Ubiquitous</string>
    <string name="button_cap_stone">Cap Stone</string>
    <string name="toast_message">This button will launch my </string>

</resources>
