<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:text="@string/text_my_nanodegree_apps"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button_popular_movies"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:onClick="onClickMovies"
        android:text="@string/button_popular_movies"
        android:textAllCaps="true"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/activity_font_size"


        />

    <Button
        android:id="@+id/button_stock_hawk"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:onClick="onClickMovies"
        android:text="@string/button_stock_hawk"
        android:textAllCaps="true"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/activity_font_size" />

    <Button
        android:id="@+id/button_build_it_bigger"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:onClick="onClickMovies"
        android:text="@string/button_build_it_bigger"
        android:textAllCaps="true"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/activity_font_size" />

    <Button
        android:id="@+id/button_make_your_app_material"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:onClick="onClickMovies"
        android:text="@string/button_make_your_app_material"
        android:textAllCaps="true"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/activity_font_size" />

    <Button
        android:id="@+id/button_go_ubiquitous"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:onClick="onClickMovies"
        android:text="@string/button_go_ubiquitous"
        android:textAllCaps="true"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/activity_font_size" />

    <Button
        android:id="@+id/button_cap_stone"
        android:layout_width="@dimen/activity_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:onClick="onClickMovies"
        android:text="@string/button_cap_stone"
        android:textAllCaps="true"
        android:textColor="@color/colorFont"
        android:textSize="@dimen/activity_font_size" />
</LinearLayout>
</ScrollView>